--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
 }
 
 section {
-  background-color: white;
+  background-color: hsla(0, 0%, 100%, 0.884);
   width: 100%;
   text-align: center;
   padding: 20px;
@@ -64,7 +64,7 @@ section img {
   width: 100%;
   height: 250px;
   border-radius: 10px;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 section p {
@@ -86,6 +86,22 @@ section img:hover {
 a {
   text-decoration: none;
   color: inherit;
+}
+.top-button{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgb(255, 152, 152);
+  padding: 10px 15px;
+  border-radius: 15px;
+  font-size: 18px;
+  text-decoration: none;
+  z-index: 100;
+  transition: 0.3s;
+}
+.top-button:hover{
+  background-color: #5a5a5a;
+  color: white;
 }
 
 /* ===== RESPONSIVE DESIGN ===== */
