--- a/style.css
+++ b/style.css
@@ -91,16 +91,17 @@ a {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: rgb(255, 152, 152);
+  background-color: rgba(255, 152, 152, 0.623);
   padding: 10px 15px;
   border-radius: 15px;
   font-size: 18px;
   text-decoration: none;
+  box-shadow: 10px 10px 10px black;
   z-index: 100;
   transition: 0.3s;
 }
 .top-button:hover{
-  background-color: #5a5a5a;
+  background-color: #5a5a5a91;
   color: white;
 }
 
