--- a/styles/gtav.css
+++ b/styles/gtav.css
@@ -19,7 +19,7 @@ p{
 }
 .link{
     background-color: rgba(212, 212, 212, 0.671);
-    margin-top: -400px;
+    margin-top: -190px;
 }
 .gall{
     text-align: right;
@@ -34,7 +34,7 @@ p{
     margin-left: 125px;
 }
 .h3{
-    margin-top: 250px;
+    margin-top: 150px;
     margin-right: 100px;
 }
 li{
@@ -93,7 +93,14 @@ button:hover{
       animation: scroll-text 13s linear infinite;
       padding-right: 27%;
     }
-
+    section img{
+    width: 10%;
+    gap: 20px;
+    transition: 0.2s;
+    }
+    section img:hover{
+    transform:scale(2.5);
+    }
     @keyframes scroll-text {
       0% {
         transform: translateX(100%);
@@ -102,3 +109,14 @@ button:hover{
         transform: translateX(-100%);
       }
     }
+    @media (max-width:768px ){
+        .link{
+            grid-template-columns: 1fr;
+            text-align: left;
+            margin-top: 100px;
+        }
+        section img{
+         width: 30%;
+        }
+    }
+    
